--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
 		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row">
-						<h2 class="text-center">La chouette agence est une entreprise de web design qui aide à devenir attractif et visible sur internet.</h2>
-						<!-- <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" /> -->
+					<h2 class="text-center">La chouette agence est une entreprise de web design qui aide à devenir
+						attractif et visible sur internet.</h2>
+					<!-- <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" /> -->
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
 					<div class="col-sm-4">
@@ -141,8 +142,9 @@
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 						<h3>"La chouette agence est une excellente agence web !
-							 Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
-							 Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h3>
+							Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à
+							notre site.
+							Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h3>
 						<h4>Maxime Guibard. PDG de A vos fourchettes</h4>
 						<!-- <img alt="agence web, agence web paris, web design paris, stratégie web"
 							src="img/citation.png" /> -->
@@ -170,8 +172,9 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche.<br><br>
-						 <a class="ltc-white bold-link" href="contacts-webdesign.html" title="Formulaire de contact">
-							Contactez notre équipe</a></h3>
+							<a class="ltc-white bold-link" href="contacts-webdesign.html" title="Formulaire de contact">
+								Contactez notre équipe</a>
+						</h3>
 					</div>
 				</div>
 			</div>
@@ -193,8 +196,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.jpg"
-								alt="refonte site journal local"
+								src="img/1.jpg" alt="refonte site journal local"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -255,10 +257,12 @@
 					<h2 class="mg-md text-center-5 tc-white-5">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
-					<div class="text-center">
+					<h3 class="text-center">
 						<a href="contacts-webdesign.html" title="Formulaire de contact"
-							class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero-btn">Contact</a>
-					</div>
+						class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
+						<!-- <a class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine cta-hero-btn" 
+							href="contacts-webdesign.html" title="Formulaire de contact">Contact</a> -->
+					</h3>
 				</div>
 			</div>
 		</div>
@@ -346,7 +350,7 @@
 			</div>
 			<!-- Principal conteneur END -->
 		</div>
-	</div>	
+	</div>
 </body>
 
 </html>
