--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 
 <body>
 	<!-- Principal conteneur -->
-	<div class="page-container">
-
+	<!-- <div class="page-container"> -->
+	<header>
 		<!-- bloc-0 -->
 		<div class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
 
-				<nav class="navbar row">
+				<div class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
 								alt="logo agence" height="40" /></a>
@@ -59,21 +59,22 @@
 								class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
 					</div>
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+					<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
 								<a href="#">Accueil</a>
 								<a href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
 							</li>
 						</ul>
-					</div>
-				</nav>
+					</nav>
+				</div>
 			</div>
 		</div>
-		<!-- bloc-0 END -->
-
+	</header>
+	<!-- bloc-0 END -->
+	<main>
 		<!-- bloc-1-presentation -->
-		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
 			id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
@@ -85,17 +86,17 @@
 						</h1>
 
 					</div>
-					<div class="text-center">
+					<nav class="text-center">
 						<a href="contacts-webdesign.html" title="Formulaire de contact"
 							class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
-					</div>
+					</nav>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-1-presentation END -->
 
 		<!-- bloc-2-services -->
-		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
+		<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row">
 					<h2 class="text-center">La chouette agence est une entreprise de web design qui aide à devenir
@@ -153,7 +154,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-2-services END -->
 
 		<!-- bloc-3-what-i-do -->
@@ -266,40 +267,40 @@
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
-
-		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-			<div class="container bloc-sm">
-				<div class="row">
-					<!-- <div class="col-sm-12"> -->
-					<h2 class="text-center black">
-						La chouette agence - Agence web basée à Lyon.<br>
-					</h2>
-					<div class="row row-no-gutters social">
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-twitter icon-md"
-										style="color: #000000;"></span></a>
-							</div>
+	</main>
+	<!-- Footer - bloc-8 -->
+	<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<div class="container bloc-sm">
+			<div class="row">
+				<!-- <div class="col-sm-12"> -->
+				<h2 class="text-center black">
+					La chouette agence - Agence web basée à Lyon.<br>
+				</h2>
+				<div class="row row-no-gutters social">
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"
+									style="color: #000000;"></span></a>
 						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-facebook icon-md"
-										style="color: #000000;"></span></a>
-							</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"
+									style="color: #000000;"></span></a>
 						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"
-										style="color: #000000;"></span></a>
-							</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"
+									style="color: #000000;"></span></a>
 						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"
-										style="color: #000000;"></span></a>
-							</div>
-							<!--
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"
+									style="color: #000000;"></span></a>
+						</div>
+						<!--
 							<div class="row">
 								<div class="col-sm-4">
 									Partenaires
@@ -340,15 +341,15 @@
 								</div>
 							</div>
 							-->
-						</div>
-						<!-- </div> -->
 					</div>
+					<!-- </div> -->
 				</div>
-				<!-- Footer - bloc-8 END -->
 			</div>
-			<!-- Principal conteneur END -->
+			<!-- Footer - bloc-8 END -->
 		</div>
+		<!-- Principal conteneur END -->
 	</div>
+	<!-- </div> -->
 </body>
 
 </html>
