--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h1 class="mg-md text-center">
+						<h1 class="text-center">
 							Web design
 						</h1>
 						<h2 class="text-center ">
@@ -120,7 +120,7 @@
 						<div class="text-center">
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h1 class="mg-md text-center">
+						<h1 class="text-center">
 							&nbsp;Stratégie
 						</h1>
 						<h2 class="text-center ">
@@ -132,7 +132,7 @@
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h1 class="mg-md text-center">
+						<h1 class="text-center">
 							Illustrations
 						</h1>
 						<h2 class="text-center ">
@@ -163,7 +163,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12">
-						<h2 class="mg-md text-center tc-pink">
+						<h2 class="text-center tc-pink">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
 							.
@@ -200,7 +200,7 @@
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="img/1.jpg" alt="refonte site journal local"
 								class="img-responsive portfolio-thumb" /></a>
-						<h3 class="mg-md text-center">
+						<h3 class="text-center">
 							Refonte d'un site web pour un journal local
 						</h3>
 						<h4 class="text-center">
@@ -212,7 +212,7 @@
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.jpg" class="img-responsive portfolio-thumb"
 								alt="site web pour photographes" /></a>
-						<h3 class="mg-md text-center">
+						<h3 class="text-center">
 							Création d'un site web pour photographes
 						</h3>
 						<h4 class="text-center">
@@ -226,7 +226,7 @@
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.jpg" class="img-responsive portfolio-thumb"
 								alt="Site web pour voyageur" /></a>
-						<h3 class="mg-md text-center">
+						<h3 class="text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
 						<h4 class="text-center">
@@ -239,7 +239,7 @@
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.jpg" class="img-responsive portfolio-thumb"
 								alt="Site web pour agence de mariage" /></a>
-						<h3 class="mg-md text-center">
+						<h3 class="text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
 						<h4 class="text-center">
@@ -255,15 +255,15 @@
 		<!-- bloc-5-cta -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
-				<div class="row">
-					<h2 class="mg-md text-center-5 tc-white-5">
+				<!-- <div class="col-mg-12 row"> -->
+					<h2 class="col-mg-12 tc-white-5">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<h3 class="text-center">
 						<a href="contacts-webdesign.html" title="Formulaire de contact"
 							class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
 					</h3>
-				</div>
+				<!-- </div> -->
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
