--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
-					<div class="col-sm-12">
+					<div class="tc-white-5">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
 							alt="Logo 2 La chouette agence" />
 						<h1 class="text-center hero-bloc-text tc-white ">
@@ -255,15 +255,15 @@
 		<!-- bloc-5-cta -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
-				<!-- <div class="col-mg-12 row"> -->
-					<h2 class="col-mg-12 tc-white-5">
+				<div class="row">
+					<h2 class="text-center tc-white-5">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<h3 class="text-center">
 						<a href="contacts-webdesign.html" title="Formulaire de contact"
 							class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
 					</h3>
-				<!-- </div> -->
+				</div>
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
