--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 			id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
-					<div class="tc-white-5">
+					<div class="Texte-entete">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
 							alt="Logo 2 La chouette agence" />
-						<h1 class="text-center hero-bloc-text tc-white ">
+						<h1 class="text-center hero-bloc-text tc-yellow ">
 							La chouette agence.
 						</h1>
 
@@ -97,13 +97,13 @@
 
 		<!-- bloc-2-services -->
 		<section class="bloc bgc-white l-bloc" id="bloc-2-services">
-			<div class="container bloc-md">
+			<!-- <div class="container bloc-md"> -->
 				<div class="row">
 					<h2 class="text-center">La chouette agence est une entreprise de web design qui aide à devenir
 						attractif et visible sur internet.</h2>
 					<!-- <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" /> -->
 				</div>
-				<div class="row voffset-lg med-width-whitespace">
+				<article class="row voffset-lg med-width-whitespace">
 					<div class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
@@ -140,8 +140,8 @@
 							graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 						</h2>
 					</div>
-				</div>
-				<div class="row voffset-lg voffset">
+				</article>
+				<article class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 						<h3>"La chouette agence est une excellente agence web !
 							Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à
@@ -150,20 +150,19 @@
 						<h4>Maxime Guibard. PDG de A vos fourchettes</h4>
 						<!-- <img alt="agence web, agence web paris, web design paris, stratégie web"
 							src="img/citation.png" /> -->
-
 					</div>
-				</div>
-			</div>
+				</article>
+			<!-- </div> -->
 		</section>
 		<!-- bloc-2-services END -->
 
 		<!-- bloc-3-what-i-do -->
-		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+		<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12">
-						<h2 class="text-center tc-pink">
+						<h2 class="text-center tc-yellow">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
 							.
@@ -180,11 +179,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-3-what-i-do END -->
 
 		<!-- bloc-4-portfolio -->
-		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+		<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="text-center">
@@ -194,7 +193,7 @@
 						-->
 					</div>
 				</div>
-				<div class="row tight-width-whitespace portfolio-row">
+				<article class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
@@ -219,8 +218,8 @@
 							Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 						</h4>
 					</div>
-				</div>
-				<div class="row tight-width-whitespace portfolio-row">
+				</article>
+				<article class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
@@ -247,22 +246,22 @@
 							présentation détaillée de leurs prestations.
 						</h4>
 					</div>
-				</div>
+				</article>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-4-portfolio END -->
 
 		<!-- bloc-5-cta -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
-					<h2 class="text-center tc-white-5">
+					<h2 class="text-center Texte-entete">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
-					<h3 class="text-center">
+					<nav class="text-center">
 						<a href="contacts-webdesign.html" title="Formulaire de contact"
 							class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
-					</h3>
+					</nav>
 				</div>
 			</div>
 		</div>
@@ -300,47 +299,47 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"
 									style="color: #000000;"></span></a>
 						</div>
-						<!--
+						
 							<div class="row">
 								<div class="col-sm-4">
 									Partenaires
 									<ul>
-										<li><a href="voiture.com">voiture.com</a></li>
-										<li><a href="pizza.com">pizza.com</a></li>
-										<li><a href="matoiture.com">matoiture.com</a></li>
-										<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+										<li><a href="#">voiture.com</a></li>
+										<li><a href="#">pizza.com</a></li>
+										<li><a href="#">matoiture.com</a></li>
+										<li><a href="#">immobilierseo.com</a></li>
 									</ul>
 								</div>
 								<div class="col-sm-4">
 									Annuaires liste 1
 									<ul>
-										<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-										<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-										<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-										<li><a href="123seoture.com">123seo.com</a></li>
-										<li><a href="123site.com">123site.com</a></li>
-										<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-										<li><a href="listeagence.com">listeagence.com</a></li>
-										<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-										<li><a href="listeseo.com">listeseo.com</a></li>
+										<li><a href="#">annuaireagence.com</a></li>
+										<li><a href="#">annuaireseo.com</a></li>
+										<li><a href="#">annuairemarketing.com</a></li>
+										<li><a href="#">123seo.com</a></li>
+										<li><a href="#">123site.com</a></li>
+										<li><a href="#">annuairewordpress.com</a></li>
+										<li><a href="#">listeagence.com</a></li>
+										<li><a href="#">meilleuresagencesparis.com</a></li>
+										<li><a href="#">listeseo.com</a></li>
 									</ul>
 								</div>
 								<div class="col-sm-4">
 									Annuaires liste 2
 									<ul>
-										<li><a href="betterseo.com">betterseo.com</a></li>
-										<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-										<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-										<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-										<li><a href="liensagogo.com">liensagogo.com</a></li>
-										<li><a href="backlink.com">backlink.com</a></li>
-										<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-										<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-										<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+										<li><a href="#">betterseo.com</a></li>
+										<li><a href="#">ameliorerseo.com</a></li>
+										<li><a href="#">seojuicelien.com</a></li>
+										<li><a href="#">meilleursliens.com</a></li>
+										<li><a href="#">liensagogo.com</a></li>
+										<li><a href="#">backlink.com</a></li>
+										<li><a href="#">linkjuiceannuaire.com</a></li>
+										<li><a href="#">remontersurgoogle.com</a></li>
+										<li><a href="#">vraiseofiable.com</a></li>
 									</ul>
 								</div>
 							</div>
-							-->
+						
 					</div>
 					<!-- </div> -->
 				</div>
