--- a/index.html
+++ b/index.html
@@ -98,66 +98,67 @@
 		<!-- bloc-2-services -->
 		<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<!-- <div class="container bloc-md"> -->
-				<div class="row">
-					<h2 class="text-center">La chouette agence est une entreprise de web design qui aide à devenir
-						attractif et visible sur internet.</h2>
-					<!-- <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" /> -->
+			<div class="row">
+				<h2 class="text-center">La chouette agence est une entreprise de web design qui aide à devenir
+					attractif et visible sur internet.</h2>
+				<!-- <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" /> -->
+			</div>
+			<article class="row voffset-lg med-width-whitespace">
+				<div class="col-sm-4">
+					<div class="text-center">
+						<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					</div>
+					<h1 class="text-center">
+						Web design
+					</h1>
+					<h2 class="text-center ">
+						Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de
+						zéro, laissez-nous vous réaliser un design dont vous serez fier.
+					</h2>
 				</div>
-				<article class="row voffset-lg med-width-whitespace">
-					<div class="col-sm-4">
-						<div class="text-center">
-							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-						</div>
-						<h1 class="text-center">
-							Web design
-						</h1>
-						<h2 class="text-center ">
-							Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de
-							zéro, laissez-nous vous réaliser un design dont vous serez fier.
-						</h2>
+				<div class="col-sm-4">
+					<div class="text-center">
+						<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 					</div>
-					<div class="col-sm-4">
-						<div class="text-center">
-							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-						</div>
-						<h1 class="text-center">
-							&nbsp;Stratégie
-						</h1>
-						<h2 class="text-center ">
-							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
-							vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
-						</h2>
+					<h1 class="text-center">
+						&nbsp;Stratégie
+					</h1>
+					<h2 class="text-center ">
+						Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
+						vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+					</h2>
+				</div>
+				<div class="col-sm-4">
+					<div class="text-center">
+						<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 					</div>
-					<div class="col-sm-4">
-						<div class="text-center">
-							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-						</div>
-						<h1 class="text-center">
-							Illustrations
-						</h1>
-						<h2 class="text-center ">
-							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
-							graphistes talentueux pour donner à vos pages une touche finale d'élégance.
-						</h2>
-					</div>
-				</article>
-				<article class="row voffset-lg voffset">
-					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<h3>"La chouette agence est une excellente agence web !
-							Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à
-							notre site.
-							Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h3>
-						<h4>Maxime Guibard. PDG de A vos fourchettes</h4>
-						<!-- <img alt="agence web, agence web paris, web design paris, stratégie web"
+					<h1 class="text-center">
+						Illustrations
+					</h1>
+					<h2 class="text-center ">
+						Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
+						graphistes talentueux pour donner à vos pages une touche finale d'élégance.
+					</h2>
+				</div>
+			</article>
+			<article class="row voffset-lg voffset">
+				<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+					<h3>"La chouette agence est une excellente agence web !
+						Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à
+						notre site.
+						Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h3>
+					<h4>Maxime Guibard. PDG de A vos fourchettes</h4>
+					<!-- <img alt="agence web, agence web paris, web design paris, stratégie web"
 							src="img/citation.png" /> -->
-					</div>
-				</article>
+				</div>
+			</article>
 			<!-- </div> -->
 		</section>
 		<!-- bloc-2-services END -->
 
 		<!-- bloc-3-what-i-do -->
-		<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+		<section
+			class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
@@ -299,50 +300,48 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"
 									style="color: #000000;"></span></a>
 						</div>
-						
-							<div class="row">
-								<div class="col-sm-4">
-									Partenaires
-									<ul>
-										<li><a href="#">voiture.com</a></li>
-										<li><a href="#">pizza.com</a></li>
-										<li><a href="#">matoiture.com</a></li>
-										<li><a href="#">immobilierseo.com</a></li>
-									</ul>
-								</div>
-								<div class="col-sm-4">
-									Annuaires liste 1
-									<ul>
-										<li><a href="#">annuaireagence.com</a></li>
-										<li><a href="#">annuaireseo.com</a></li>
-										<li><a href="#">annuairemarketing.com</a></li>
-										<li><a href="#">123seo.com</a></li>
-										<li><a href="#">123site.com</a></li>
-										<li><a href="#">annuairewordpress.com</a></li>
-										<li><a href="#">listeagence.com</a></li>
-										<li><a href="#">meilleuresagencesparis.com</a></li>
-										<li><a href="#">listeseo.com</a></li>
-									</ul>
-								</div>
-								<div class="col-sm-4">
-									Annuaires liste 2
-									<ul>
-										<li><a href="#">betterseo.com</a></li>
-										<li><a href="#">ameliorerseo.com</a></li>
-										<li><a href="#">seojuicelien.com</a></li>
-										<li><a href="#">meilleursliens.com</a></li>
-										<li><a href="#">liensagogo.com</a></li>
-										<li><a href="#">backlink.com</a></li>
-										<li><a href="#">linkjuiceannuaire.com</a></li>
-										<li><a href="#">remontersurgoogle.com</a></li>
-										<li><a href="#">vraiseofiable.com</a></li>
-									</ul>
-								</div>
-							</div>
-						
 					</div>
-					<!-- </div> -->
 				</div>
+				<div class="row black">
+					<div class="col-sm-4 black">
+						Partenaires
+						<ul>
+							<li><a href="#">voiture.com</a></li>
+							<li><a href="#">pizza.com</a></li>
+							<li><a href="#">matoiture.com</a></li>
+							<li><a href="#">immobilierseo.com</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-4">
+						Annuaires liste 1
+						<ul>
+							<li><a href="#">annuaireagence.com</a></li>
+							<li><a href="#">annuaireseo.com</a></li>
+							<li><a href="#">annuairemarketing.com</a></li>
+							<li><a href="#">123seo.com</a></li>
+							<li><a href="#">123site.com</a></li>
+							<li><a href="#">annuairewordpress.com</a></li>
+							<li><a href="#">listeagence.com</a></li>
+							<li><a href="#">meilleuresagencesparis.com</a></li>
+							<li><a href="#">listeseo.com</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-4">
+						Annuaires liste 2
+						<ul>
+							<li><a href="#">betterseo.com</a></li>
+							<li><a href="#">ameliorerseo.com</a></li>
+							<li><a href="#">seojuicelien.com</a></li>
+							<li><a href="#">meilleursliens.com</a></li>
+							<li><a href="#">liensagogo.com</a></li>
+							<li><a href="#">backlink.com</a></li>
+							<li><a href="#">linkjuiceannuaire.com</a></li>
+							<li><a href="#">remontersurgoogle.com</a></li>
+							<li><a href="#">vraiseofiable.com</a></li>
+						</ul>
+					</div>
+				</div>
+				<!-- </div> -->
 			</div>
 			<!-- Footer - bloc-8 END -->
 		</div>
