--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 	<!-- Footer - bloc-8 -->
 	<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 		<div class="container bloc-sm">
-			<div class="row">
+			<!-- <div class="row"> -->
 				<!-- <div class="col-sm-12"> -->
 				<h2 class="text-center black">
 					La chouette agence - Agence web basée à Lyon.<br>
@@ -303,18 +303,18 @@
 					</div>
 				</div>
 				<div class="row black">
-					<div class="col-sm-4 black">
+					<div class="col-sm-4">
 						Partenaires
-						<ul>
+						<ul class="black-20">
 							<li><a href="#">voiture.com</a></li>
 							<li><a href="#">pizza.com</a></li>
 							<li><a href="#">matoiture.com</a></li>
 							<li><a href="#">immobilierseo.com</a></li>
 						</ul>
 					</div>
-					<div class="col-sm-4">
+					<div class="col-sm-4 black-20">
 						Annuaires liste 1
-						<ul>
+						<ul class="black-20">
 							<li><a href="#">annuaireagence.com</a></li>
 							<li><a href="#">annuaireseo.com</a></li>
 							<li><a href="#">annuairemarketing.com</a></li>
@@ -342,7 +342,7 @@
 					</div>
 				</div>
 				<!-- </div> -->
-			</div>
+			<!-- </div> -->
 			<!-- Footer - bloc-8 END -->
 		</div>
 		<!-- Principal conteneur END -->
