--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
 								alt="logo agence" height="40" /></a>
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+						<!-- <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
 								class="icon-bar"></span><span class="icon-bar"></span>
-						</button>
+						</button> -->
 					</div>
-					<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-						<ul class="site-navigation nav navbar-nav">
+					<!-- <nav class="collapse navbar-collapse navbar-1 special-dropdown-nav"> -->
+						<ul class="site-navigation nav navbar-nav black-20">
 							<li>
 								<a href="#">Accueil</a>
 								<a href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
 							</li>
 						</ul>
-					</nav>
+					<!-- </nav> -->
 				</div>
 			</div>
 		</div>
@@ -302,7 +302,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row black">
+				<div class="row black-25">
 					<div class="col-sm-4">
 						Partenaires
 						<ul class="black-20">
@@ -312,7 +312,7 @@
 							<li><a href="#">immobilierseo.com</a></li>
 						</ul>
 					</div>
-					<div class="col-sm-4 black-20">
+					<div class="col-sm-4">
 						Annuaires liste 1
 						<ul class="black-20">
 							<li><a href="#">annuaireagence.com</a></li>
@@ -328,7 +328,7 @@
 					</div>
 					<div class="col-sm-4">
 						Annuaires liste 2
-						<ul>
+						<ul class="black-20">
 							<li><a href="#">betterseo.com</a></li>
 							<li><a href="#">ameliorerseo.com</a></li>
 							<li><a href="#">seojuicelien.com</a></li>
