--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -52,22 +52,20 @@
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
 								alt="atlanta web design logo" height="40" /></a>
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+						<!-- <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
 								class="icon-bar"></span><span class="icon-bar"></span>
-						</button>
+						</button> -->
 					</div>
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a href="index.html">Accueil</a>
-							</li>
-							<li>
-								<a href="#">Nous contacter...</a>
-							</li>
-						</ul>
-					</div>
+					<!-- <div class="collapse navbar-collapse navbar-1 special-dropdown-nav"> -->
+					<ul class="site-navigation nav navbar-nav black-20">
+						<li>
+							<a href="index.html">Accueil</a>
+							<a href="#">Nous contacter...</a>
+						</li>
+					</ul>
+					<!-- </div> -->
 				</nav>
 			</div>
 		</div>
