correction couleur noir pour icones footer

--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -147,31 +147,31 @@
 		<!-- Footer - bloc-8 -->
 		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
-				<div class="row">
-					<div class="col-sm-12">
-						<h4 class="text-center tc-pink">
+				<!-- <div class="row">
+					<div class="col-sm-12"> -->
+						<h4 class="text-center black">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</h4>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-twitter icon-md black"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-facebook icon-md black"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md black"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
 									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span></a>
+											class="fa fa-instagram icon-md black"></span></a>
 								</div>
 							</div>
 						</div>
@@ -216,8 +216,8 @@
 							</div>
 						</div>
 						-->
-					</div>
-				</div>
+				<!--	</div>
+				</div> -->
 			</div>
 		</div>
 		<!-- Footer - bloc-8 END -->
